ros2_truckplatoon/log/build_2022-10-30_16-32-37/truck/stdout_stderr.log
Scanning dependencies of target truck
[ 16%] Building CXX object CMakeFiles/truck.dir/src/src/Truck.cpp.o
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.cpp:1:
/Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.hpp:4:10: warning: non-portable path to file '"utils/include.hpp"'; specified path differs in case from file name on disk [-Wnonportable-include-path]
#include "utils/Include.hpp"
         ^~~~~~~~~~~~~~~~~~~
         "utils/include.hpp"
/Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.cpp:35:23: error: no member named 'get_logger' in 'Truck'
    RCLCPP_INFO(this->get_logger(), "TopicName");
                ~~~~  ^
/Users/brodie/ros2_foxy/ros2-osx/include/rclcpp/logging.hpp:538:86: note: expanded from macro 'RCLCPP_INFO'
      ::std::is_same<typename std::remove_cv<typename std::remove_reference<decltype(logger)>::type>::type, \
                                                                                     ^~~~~~
/Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.cpp:35:23: error: no member named 'get_logger' in 'Truck'
    RCLCPP_INFO(this->get_logger(), "TopicName");
                ~~~~  ^
/Users/brodie/ros2_foxy/ros2-osx/include/rclcpp/logging.hpp:543:7: note: expanded from macro 'RCLCPP_INFO'
      logger.get_name(), \
      ^~~~~~
/Users/brodie/ros2_foxy/ros2-osx/include/rcutils/logging_macros.h:502:63: note: expanded from macro 'RCUTILS_LOG_INFO_NAMED'
    RCUTILS_LOG_CONDITION_EMPTY, RCUTILS_LOG_CONDITION_EMPTY, name, \
                                                              ^~~~
/Users/brodie/ros2_foxy/ros2-osx/include/rcutils/logging_macros.h:70:47: note: expanded from macro 'RCUTILS_LOG_COND_NAMED'
    if (rcutils_logging_logger_is_enabled_for(name, severity)) { \
                                              ^~~~
/Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.cpp:35:23: error: no member named 'get_logger' in 'Truck'
    RCLCPP_INFO(this->get_logger(), "TopicName");
                ~~~~  ^
/Users/brodie/ros2_foxy/ros2-osx/include/rclcpp/logging.hpp:543:7: note: expanded from macro 'RCLCPP_INFO'
      logger.get_name(), \
      ^~~~~~
/Users/brodie/ros2_foxy/ros2-osx/include/rcutils/logging_macros.h:502:63: note: expanded from macro 'RCUTILS_LOG_INFO_NAMED'
    RCUTILS_LOG_CONDITION_EMPTY, RCUTILS_LOG_CONDITION_EMPTY, name, \
                                                              ^~~~
/Users/brodie/ros2_foxy/ros2-osx/include/rcutils/logging_macros.h:72:58: note: expanded from macro 'RCUTILS_LOG_COND_NAMED'
      rcutils_log(&__rcutils_logging_location, severity, name, __VA_ARGS__); \
                                                         ^~~~
1 warning and 3 errors generated.
gmake[2]: *** [CMakeFiles/truck.dir/build.make:95: CMakeFiles/truck.dir/src/src/Truck.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:97: CMakeFiles/truck.dir/all] Error 2
gmake: *** [Makefile:160: all] Error 2
